Additional zgc non-generational analysis.